editar boton navbar

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </li>
             </ul> -->
             <form class="d-flex">
-               <button class="btn btn-outline-success" type="submit">Create New Post</button>
+               <button class="btn btn-success" type="submit">Create New Post</button>
                <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-gear"></i>
